--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "node": "^20.10"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.4.1",
+    "@biomejs/biome": "^1.6.4",
     "@types/node": "^20.10.4",
     "c8": "^8.0.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "express@<4.19.2": ">=4.19.2",
+      "jose@>=3.0.0 <=4.15.4": ">=4.15.5"
+    }
   }
 }
